--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                     drama vencedor do Emmy e do Globo de Ouro.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
@@ -40,6 +42,6 @@
 
         </div>
     </main>
-</body>
+    <script src="https://kit.fontawesome.com/73d14b10b9.js" crossorigin="anonymous"></script>
 
 </html>
