--- a/index.html
+++ b/index.html
@@ -31,22 +31,37 @@
     </header>
     <main>
         <div class="filme-principal">
-            <div class="container">
+            <div  class="container">
                 <h3 class="titulo">HOUSE OF CARDS</h3>
                 <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste
                     drama vencedor do Emmy e do Globo de Ouro.</p>
-               
-                <div  class="botoes">
+
+                <div class="botoes">
                     <button id="myBtn" role="button" class="botao">
                         <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                     </button>
-                    <button role="button" class="botao">
+                    <button id="infoViewer" role="button" class="botao">
                         <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
-                     <!-- Trigger/Open The Modal   -->
-                    <div id="myModal" class="modal">  
+                    <button id="menosInfo" role="button" class="botao menosInfo">
+                        <i class="fas fa-info-circle"></i>
+                        MENOS INFORMAÇÕES
+                    </button>
+                    <div>
+                        <p id="infoView">
+                            A produção foi baseada em um armazém de mais de 300.000 pés quadrados no distrito industrial
+                            de moda em Joppa, Maryland. O set é, na verdade, parte de um antigo centro de distribuição
+                            da Macy's, e todas as cenas de direção foram realizadas em uma sala com tela verde, que
+                            servia como geladeira para casacos de pele. Dentro do prédio, os seguintes conjuntos podem
+                            ser encontrados: Gabinete Oval, a casa Underwood (níveis superior inferior e principal),
+                            Câmara dos Representantes, vários escritórios de representação estadual, gabinete do
+                            governador da Carolina do Sul, várias suítes luxuosas de hotel.
+                        </p>
+                    </div>
+                    <!-- Trigger/Open The Modal   -->
+                    <div id="myModal" class="modal">
                         <div class="modal-content">
                             <span class="close">&times;</span>
                             <video id="myVideo" width="100%" controls>
@@ -63,7 +78,7 @@
 
         </div>
     </main>
-    <div class="carrosel-filmes">
+    <div id="carrosel" class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
                 <img class="filme" src="img/mini1.jpg" alt="" srcset="">
@@ -103,7 +118,38 @@
     <script src="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/setup.js"></script>
     <script src="js/modal.js"></script>
-    
+    <script>
+
+
+
+        // Formatando informações 
+
+
+        var info = document.getElementById("infoViewer");
+        var infoView = document.getElementById("infoView");
+        var carrosel = document.getElementById("carrosel");
+        var menosInfo = document.getElementById("menosInfo");
+        var container = document.getElementsByClassName("container");
+
+            //Ocultar botão mais informações e o carrosel e mostrar as informações e o botão menos informações
+        info.onclick = function () {
+            infoView.style.display = "block";
+            carrosel.style.display = "none";
+            menosInfo.style.display = "block";
+            info.style.display = "none";
+            container.style.justifyContent = "space-between";
+
+        }
+        // Ocultar o botão menos infortmações e a mensagem e voltar a mostrar o carrosel 
+        menosInfo.onclick = function () {
+            carrosel.style.display = "block";
+            infoView.style.display = "none";
+            menosInfo.style.display = "none";
+            info.style.display = "block";
+            container.style.justifyContent = "space-between";
+        }
+    </script>
+
 </body>
 
 </html>
