Tirando o texto mais informações do HTML e colocando no Javascript

--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
                     
                     <div>
                         <p id="infoView">
-                            A produção foi baseada em um armazém de mais de 300.000 pés quadrados no distrito industrial
-                            de moda em Joppa, Maryland. O set é, na verdade, parte de um antigo centro de distribuição
-                            da Macy's, e todas as cenas de direção foram realizadas em uma sala com tela verde, que
-                            servia como geladeira para casacos de pele. Dentro do prédio, os seguintes conjuntos podem
-                            ser encontrados: Gabinete Oval, a casa Underwood (níveis superior inferior e principal),
-                            Câmara dos Representantes, vários escritórios de representação estadual, gabinete do
-                            governador da Carolina do Sul, várias suítes luxuosas de hotel.
+                           carregar mais informações
                         </p>
                     </div>
                     <!-- Trigger/Open The Modal   -->
